# dsx4unix

./: .gitignore  .gitmodules  README.md  pyproject.toml  run-racingdsx-headless.sh  run-racingdsx.sh  start_dsx
RacingDSX/: RacingDSX.dll.config  RacingDSX.json
RacingDSX-Headless/: Program.cs  RacingDSX.csproj  RacingDSXWorker.cs
RacingDSX-Headless/Config/: ConfigHandler.cs
RacingDSX-Headless/GameParsers/: ForzaParser.cs  Parser.cs
config/: RacingDSX.json  default.yaml
config/trigger-presets/: high.json
docs/plans/: 2026-07-17-high-trigger-profile-design.md  2026-07-17-portable-dsx-stack-design.md  2026-07-17-portable-dsx-stack-implementation.md
docs/superpowers/plans/: 2026-07-17-high-trigger-profile.md
scripts/: apply-trigger-profile.py  bootstrap-stack.sh  run-dsx4unix.sh  test-hefesto-trigger.py
src/dsx4unix/: __init__.py  __main__.py  dsx.py  engine.py  mapper.py  telemetry.py
src/dsx4unix/config/: loader.py  models.py
src/dsx4unix/parsers/: base.py  dirt.py  forza.py
systemd/: hefesto-dualsense4unix.service.in  racingdsx.service.in
tests/: test_dsx_translation.py  test_racingdsx_parity.py  test_stack_bootstrap.py  test_start_dsx.py  test_telemetry_parser.py  test_trigger_profiles.py
