[project]
name = "dsx4unix"
version = "0.1.0"
description = "Racing telemetry → DualSense adaptive triggers on Linux (DSX protocol bridge)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
dsx4unix = "dsx4unix.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
